--- a/Hadoop_Setting_up_Spark_Standalone_on_Google_Colab.ipynb
+++ b/Hadoop_Setting_up_Spark_Standalone_on_Google_Colab.ipynb
@@ -13,7 +13,7 @@
         "AZuz6m48UyoO"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO6Smj7jQrFmPCyUweCDlRo",
+      "authorship_tag": "ABX9TyNOOxbVKBBm2mVRB1+vG+vj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" align=right width=\"90\" alt=\"Logo Big Data for Beginners\"></div></a>\n",
         "# Install and run Spark in standalone mode\n",
+        "<br>\n",
         "\n",
         " Following the instructions at: https://spark.apache.org/docs/latest/spark-standalone.html\n",
         "\n",
@@ -57,7 +59,7 @@
       "metadata": {
         "id": "j0ya6VMzXbKe"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +92,7 @@
       "metadata": {
         "id": "jpFpNnHSnY06"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +142,7 @@
         "id": "QdH7mXA6dX9M",
         "outputId": "47da2c0b-8feb-4d00-b029-153c35b26ebe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +174,7 @@
         "id": "IcQOKK5ZnPD_",
         "outputId": "e85901a3-8110-49ac-9d1e-144ea9999bf1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +217,7 @@
         "id": "kRsquZME3dG3",
         "outputId": "1a7c7c0b-3453-4c3e-beff-8828f88413f1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +241,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +262,7 @@
       "metadata": {
         "id": "-J3l_bVJpTJz"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +289,7 @@
         "id": "kre-ctnK8zWX",
         "outputId": "9c1d398a-365a-4c08-d7d4-08ca3b09ce9a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +323,7 @@
         "id": "umlE8ZqXBXDS",
         "outputId": "9f66572e-c251-45a9-8fd0-8f9df0c90010"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +346,7 @@
         "id": "a6FcJeTkHPVQ",
         "outputId": "102cfe7b-da9b-4cc7-be5b-5665cc0eb1e4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +389,7 @@
         "id": "-hYedhHnH_B-",
         "outputId": "7787f9be-2b25-410b-ce40-6730a5f4189e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +432,7 @@
         "id": "UIwAxufaTYJ3",
         "outputId": "4ed0c2e5-fe61-4f11-bb2b-f433aa3c2330"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -502,7 +504,7 @@
         "id": "a4COXhlrR1mG",
         "outputId": "841318b8-7a5e-406a-f1d9-a2b43358e9b5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +820,7 @@
         "id": "KE4B2RY5U4wG",
         "outputId": "87f84f2e-dbba-4b4f-e8ce-e880b967cf5d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
