--- a/polynomial_regression.ipynb
+++ b/polynomial_regression.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "Set the number of data points `N` and the degree `D` of the polynomial that is going to fit to the data. \n",
     "\n",
-    "**Note:** for `N = 1` this is _linear regression_."
+    "**Note:** for `D = 1` this is _linear regression_."
    ]
   },
   {
