--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -22,7 +22,7 @@
         "IF6-Z5RotAcO"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMyrV0+c1LLNnnGTzBgsPbK",
+      "authorship_tag": "ABX9TyOKP2xNAmG+VVe18vCXUgql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,23 +70,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Contents\n",
+        "---\n",
+        "## Table of contents\n",
         "\n",
-        "[Prologue](#scrollTo=oUuQjW2oNMcJ)\n",
+        "> [Prologue](#scrollTo=oUuQjW2oNMcJ)\n",
         "\n",
-        "> Check Java | Download Hadoop | Configure | Setup SSH\n",
+        ">> Check Java | Download Hadoop | Configure | Setup SSH\n",
         "\n",
-        "[Launch cluster](#scrollTo=V68C4cDySyek)\n",
+        "> [Launch cluster](#scrollTo=V68C4cDySyek)\n",
         "\n",
-        "[Run some simple hdfs commands](#scrollTo=CKRRbwDFv3ZQ)\n",
+        "> [Run some simple hdfs commands](#scrollTo=CKRRbwDFv3ZQ)\n",
         "\n",
-        "[Run some simple MrReduce jobs](#scrollTo=G3KBe4R65bl1)\n",
+        "> [Run some simple MrReduce jobs](#scrollTo=G3KBe4R65bl1)\n",
         "\n",
-        ">Simplest MapReduce job | Filter a log file | Aggregate data \n",
+        ">> Simplest MapReduce job | Filter a log file | Aggregate data \n",
         "\n",
-        "[Stop cluster](#scrollTo=IF6-Z5RotAcO)\n",
+        "> [Stop cluster](#scrollTo=IF6-Z5RotAcO)\n",
         "\n",
-        "[Concluding remarks](#scrollTo=w5N7tb0HSbZB)\n",
+        "> [Concluding remarks](#scrollTo=w5N7tb0HSbZB)\n",
+        "\n",
+        "---\n",
         "\n"
       ],
       "metadata": {
