--- a/Hadoop_single_node_cluster_setup_Python.ipynb
+++ b/Hadoop_single_node_cluster_setup_Python.ipynb
@@ -22,7 +22,7 @@
         "bGYNMicCLyBX",
         "zamj-W64wbVa"
       ],
-      "authorship_tag": "ABX9TyP2+SB2TaDQsHaC+/s/8Rzb",
+      "authorship_tag": "ABX9TyOMnmHdg4JI0TJlRiFjAaZG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,76 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Hadoop single-node cluster setup with Python"
+        "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" align=right width=\"90\"></div></a>\n",
+        "\n",
+        "# Hadoop single-node cluster setup with Python\n",
+        "<br>\n",
+        "<br>\n",
+        "\n",
+        "Following Apache's official documentation [Hadoop: Setting up a Single Node Cluster](https://hadoop.apache.org/docs/stable/hadoop-project-dist/hadoop-common/SingleCluster.html) we are going to launch a single node Hadoop cluster using as much as possible Python commands. This is the companion notebook to [Hadoop Setting up a Single Node Cluster](https://github.com/groda/big_data/blob/master/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb), implemented in bash."
       ],
       "metadata": {
         "id": "_7teiy-B-x8F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "## Table of Contents\n",
+        ">[Constants](#scrollTo=qQsQTnh_OS0x)\n",
+        "\n",
+        ">[Setup logging](#scrollTo=McIME8-uo3vE)\n",
+        "\n",
+        ">[Start sshd server](#scrollTo=cVJuMb2S_Z-6)\n",
+        "\n",
+        ">>[Install openssh-server](#scrollTo=1Ez3vXkfABId)\n",
+        "\n",
+        ">>[Configure sshd service](#scrollTo=ZNrU4cMEAKos)\n",
+        "\n",
+        ">>[Start sshd service](#scrollTo=UEHqbVByASWe)\n",
+        "\n",
+        ">>[Create private/public key](#scrollTo=wBlhhfoGAZur)\n",
+        "\n",
+        ">>>[Test ssh connection](#scrollTo=27Haz3a4_pCs)\n",
+        "\n",
+        ">[Setup Hadoop](#scrollTo=q_s9ZgjHOQxb)\n",
+        "\n",
+        ">>[Download core Hadoop](#scrollTo=33u0fS_0_Gut)\n",
+        "\n",
+        ">>[Uncompress archive](#scrollTo=u6o4kQjNqyv7)\n",
+        "\n",
+        ">>[Configure Hadoop](#scrollTo=w3_gaoxYGm6R)\n",
+        "\n",
+        ">>>>[Environment variables](#scrollTo=C2bsvigF1Ghb)\n",
+        "\n",
+        ">>>>[Hadoop configuration files](#scrollTo=Cz1eDw4X6r_t)\n",
+        "\n",
+        ">>>>[A note on Hadoop's default configuration files](#scrollTo=UoZhdlmOeXna)\n",
+        "\n",
+        ">>[Launch a single-node Hadoop cluster](#scrollTo=DK1-yry6BKI9)\n",
+        "\n",
+        ">>>[Initialize the namenode](#scrollTo=dLo0tEVpBbsR)\n",
+        "\n",
+        ">[Start Hadoop](#scrollTo=bGYNMicCLyBX)\n",
+        "\n",
+        ">[Check namenode](#scrollTo=zamj-W64wbVa)\n",
+        "\n",
+        ">>[On the command-line](#scrollTo=35UTM5dXsPYy)\n",
+        "\n",
+        ">>[In the Web UI](#scrollTo=e65yJmJ9sW0V)\n",
+        "\n",
+        ">[Stop Hadoop](#scrollTo=RL57UBPWtTgF)\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "colab_type": "toc",
+        "id": "HZ-Jjpx7ekch"
       }
     },
     {
@@ -64,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "RJTcdb67Gafx"
       },
@@ -108,7 +174,7 @@
       "metadata": {
         "id": "tZzz6S5aPdkY"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +203,7 @@
       "metadata": {
         "id": "gbSclw8sS3rO"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +220,7 @@
         "id": "H47CJUEjPj_I",
         "outputId": "96060a12-4020-406d-e564-0c8dbbaa1d9c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +256,7 @@
       "metadata": {
         "id": "RsDuBdmkU6rJ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,7 +282,7 @@
         "id": "6_S-0e0TP4Bm",
         "outputId": "7799615a-9a33-4c44-f511-43a044227a7d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +320,7 @@
         "id": "1aYrKB1n2U0f",
         "outputId": "8bb4e32c-6eb8-4307-ba17-6be9a599aaba"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +350,7 @@
       "metadata": {
         "id": "6XdZ2nii2Z_e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,7 +373,7 @@
       "metadata": {
         "id": "RfaHQ2mP2cnH"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +388,7 @@
       "metadata": {
         "id": "LDbc--yKfLhk"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -348,7 +414,7 @@
         "id": "LgHjpcywWHBj",
         "outputId": "fd0419c2-56c9-4f9b-8846-a8ec11e7a052"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +464,7 @@
         "id": "anunz_InIgo3",
         "outputId": "cf0ee2bc-725e-4191-971a-cb3f7b49b881"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +505,7 @@
         "id": "5UQhLUNpO4tZ",
         "outputId": "f823a58b-51b6-42ee-cb4e-52c3575e997c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +544,7 @@
       "metadata": {
         "id": "K6aui59yGmYd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +576,7 @@
       "metadata": {
         "id": "2CBsVIlb0MVY"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +588,7 @@
       "metadata": {
         "id": "SYpaiUbKNgAE"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +624,7 @@
         "id": "aTy2wb3o1ECb",
         "outputId": "c48ecc2d-cfd1-4d34-dce8-247562cb54e1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,7 +693,7 @@
         },
         "outputId": "fc5196ef-ca9f-4aea-f847-960d8ef06a87"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,7 +735,7 @@
         "id": "MFbwYpOdgGQg",
         "outputId": "04883131-f0f2-4ae7-b06a-fcd71f0f5e99"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -730,7 +796,7 @@
         "id": "Q_mDgPqTCi8D",
         "outputId": "e614e2a2-b081-42f6-c182-6820bc4eef2b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +828,7 @@
         "id": "Ws9hy0B7Cj69",
         "outputId": "51f1a6ae-354a-4b3d-f2d2-e86dc0818db5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +871,7 @@
         "id": "S14iqwbWaZu2",
         "outputId": "bab8543a-84ec-4313-eff4-1c7fcd80313f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,7 +946,7 @@
         "id": "QYakF2Muw69p",
         "outputId": "bad45bf3-7b14-4771-9c8a-eb37962bb38a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,7 +990,7 @@
         "id": "dDT7og8wxiYA",
         "outputId": "0a0f894e-b658-484a-e085-32be8b24bbda"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -967,7 +1033,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
