--- a/Hadoop_single_node_cluster_setup_Python.ipynb
+++ b/Hadoop_single_node_cluster_setup_Python.ipynb
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 1,
       "metadata": {
         "id": "RJTcdb67Gafx"
       },
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "tZzz6S5aPdkY"
       },
-      "execution_count": 37,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "gbSclw8sS3rO"
       },
-      "execution_count": 38,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -218,15 +218,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H47CJUEjPj_I",
-        "outputId": "37f19543-5396-41c1-90d6-c4d2a70b65bd"
+        "outputId": "098af7b8-1f05-48f2-df95-62726869821c"
       },
-      "execution_count": 39,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "17-Oct-23 08:56:37 PM - INFO: Installing openssh-server\n"
+            "17-Oct-23 09:06:10 PM - INFO: Installing openssh-server\n"
           ]
         }
       ]
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "RsDuBdmkU6rJ"
       },
-      "execution_count": 40,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -280,15 +280,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6_S-0e0TP4Bm",
-        "outputId": "dec4ca0c-1144-4b60-964e-97c61b1a6f12"
+        "outputId": "bf5a9559-96ed-43f7-9007-821e8ce502d7"
       },
-      "execution_count": 41,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "17-Oct-23 08:56:41 PM - INFO: Starting openssh-server\n"
+            "17-Oct-23 09:06:25 PM - INFO: Starting openssh-server\n"
           ]
         }
       ]
@@ -318,24 +318,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1aYrKB1n2U0f",
-        "outputId": "e4ab969e-3797-4e52-adf2-14d9cc0ca4b3"
+        "outputId": "d0171a22-ff6d-4ecc-a5c2-453c094a9b5e"
       },
-      "execution_count": 42,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: Crypto in /usr/local/lib/python3.10/dist-packages (1.4.1)\n",
-            "Requirement already satisfied: Naked in /usr/local/lib/python3.10/dist-packages (from Crypto) (0.1.32)\n",
-            "Requirement already satisfied: shellescape in /usr/local/lib/python3.10/dist-packages (from Crypto) (3.8.1)\n",
+            "Collecting Crypto\n",
+            "  Downloading crypto-1.4.1-py2.py3-none-any.whl (18 kB)\n",
+            "Collecting Naked (from Crypto)\n",
+            "  Downloading Naked-0.1.32-py2.py3-none-any.whl (587 kB)\n",
+            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 587.7/587.7 kB 4.6 MB/s eta 0:00:00\n",
+            "Collecting shellescape (from Crypto)\n",
+            "  Downloading shellescape-3.8.1-py2.py3-none-any.whl (3.1 kB)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from Naked->Crypto) (2.31.0)\n",
             "Requirement already satisfied: pyyaml in /usr/local/lib/python3.10/dist-packages (from Naked->Crypto) (6.0.1)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->Naked->Crypto) (3.3.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->Naked->Crypto) (3.4)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->Naked->Crypto) (2.0.6)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->Naked->Crypto) (2023.7.22)\n",
-            "Requirement already satisfied: pycryptodome in /usr/local/lib/python3.10/dist-packages (3.19.0)\n"
+            "Installing collected packages: shellescape, Naked, Crypto\n",
+            "Successfully installed Crypto-1.4.1 Naked-0.1.32 shellescape-3.8.1\n",
+            "Collecting pycryptodome\n",
+            "  Downloading pycryptodome-3.19.0-cp35-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.1 MB)\n",
+            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2.1/2.1 MB 20.4 MB/s eta 0:00:00\n",
+            "Installing collected packages: pycryptodome\n",
+            "Successfully installed pycryptodome-3.19.0\n"
           ]
         }
       ]
@@ -348,7 +358,7 @@
       "metadata": {
         "id": "6XdZ2nii2Z_e"
       },
-      "execution_count": 43,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -371,7 +381,7 @@
       "metadata": {
         "id": "RfaHQ2mP2cnH"
       },
-      "execution_count": 44,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -386,7 +396,7 @@
       "metadata": {
         "id": "LDbc--yKfLhk"
       },
-      "execution_count": 45,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -410,14 +420,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LgHjpcywWHBj",
-        "outputId": "28610678-95a6-49b3-947b-e6caf5d5e06b"
+        "outputId": "4c36fb50-8b5c-4058-9884-d3e2de1b56a3"
       },
-      "execution_count": 46,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Warning: Permanently added 'localhost' (ED25519) to the list of known hosts.\r\n",
             "hi!\n"
           ]
         }
@@ -460,15 +471,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "anunz_InIgo3",
-        "outputId": "059c3cdf-edb5-49da-bd35-1050d49134f2"
+        "outputId": "3cca682e-70d7-4021-bf66-522c805f7bf9"
       },
-      "execution_count": 47,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "17-Oct-23 08:56:54 PM - INFO: hadoop-3.3.6.tar.gz already exists, not downloading\n"
+            "17-Oct-23 09:06:39 PM - INFO: Downloading hadoop-3.3.6.tar.gz\n"
           ]
         }
       ]
@@ -501,15 +512,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5UQhLUNpO4tZ",
-        "outputId": "49f45cee-c94e-46b0-b1f3-b01f1504a678"
+        "outputId": "03952378-763b-4e79-d679-7e6161187680"
       },
-      "execution_count": 48,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "17-Oct-23 08:56:54 PM - INFO: hadoop-3.3.6.tar.gz is already uncompressed\n"
+            "17-Oct-23 09:07:13 PM - INFO: Uncompressing hadoop-3.3.6.tar.gz\n"
           ]
         }
       ]
@@ -542,7 +553,7 @@
       "metadata": {
         "id": "K6aui59yGmYd"
       },
-      "execution_count": 49,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -574,7 +585,7 @@
       "metadata": {
         "id": "2CBsVIlb0MVY"
       },
-      "execution_count": 50,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -586,7 +597,7 @@
       "metadata": {
         "id": "SYpaiUbKNgAE"
       },
-      "execution_count": 51,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -620,16 +631,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aTy2wb3o1ECb",
-        "outputId": "f5457c4c-4b92-45f0-9241-8cc0e02b1bce"
+        "outputId": "395197d0-1fcd-4ef1-ff1d-69c2391b937d"
       },
-      "execution_count": 52,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "17-Oct-23 08:56:54 PM - INFO: add property fs.defaultFS to /content/hadoop-3.3.6/etc/hadoop/core-site.xml\n",
-            "17-Oct-23 08:56:54 PM - INFO: add property dfs.replication to /content/hadoop-3.3.6/etc/hadoop/hdfs-site.xml\n"
+            "17-Oct-23 09:07:31 PM - INFO: add property fs.defaultFS to /content/hadoop-3.3.6/etc/hadoop/core-site.xml\n",
+            "17-Oct-23 09:07:31 PM - INFO: add property dfs.replication to /content/hadoop-3.3.6/etc/hadoop/hdfs-site.xml\n"
           ]
         },
         {
@@ -689,15 +700,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2b6919ea-6fa8-42a4-9790-552a7e494429"
+        "outputId": "20188d14-8063-427b-f92e-d046d8f74669"
       },
-      "execution_count": 53,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "17-Oct-23 08:56:54 PM - INFO: Editing /content/hadoop-3.3.6/etc/hadoop/hadoop-env.sh\n"
+            "17-Oct-23 09:07:31 PM - INFO: Editing /content/hadoop-3.3.6/etc/hadoop/hadoop-env.sh\n"
           ]
         }
       ]
@@ -731,9 +742,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MFbwYpOdgGQg",
-        "outputId": "2f61d8a1-fa74-4c0a-a6e0-e8b06e332b55"
+        "outputId": "6b6c0021-15c2-4f0f-9a8c-f53db03773de"
       },
-      "execution_count": 54,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +758,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 19
         }
       ]
     },
@@ -792,15 +803,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q_mDgPqTCi8D",
-        "outputId": "a731de7f-bd03-4c45-b6ae-e530bebb030e"
+        "outputId": "43049deb-e3b9-498c-c05e-357276aaa44e"
       },
-      "execution_count": 55,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "17-Oct-23 08:56:54 PM - INFO: Formatting NameNode\n"
+            "17-Oct-23 09:07:31 PM - INFO: Formatting NameNode\n"
           ]
         }
       ]
@@ -824,9 +835,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ws9hy0B7Cj69",
-        "outputId": "1ff02975-d4cc-4407-e465-97ac370ab604"
+        "outputId": "78c5f565-3acd-48cf-bbd5-dd9c8ccce3b3"
       },
-      "execution_count": 56,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +845,8 @@
           "text": [
             "Starting namenodes on [localhost]\n",
             "Starting datanodes\n",
-            "Starting secondary namenodes [55c1a423cc62]\n"
+            "Starting secondary namenodes [e5e881af2f97]\n",
+            "e5e881af2f97: Warning: Permanently added 'e5e881af2f97' (ED25519) to the list of known hosts.\n"
           ]
         }
       ]
@@ -867,17 +879,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S14iqwbWaZu2",
-        "outputId": "dc0f58dd-a23b-488a-d247-cd6f113b2c2d"
+        "outputId": "8b97ddc4-9a20-4363-a75e-e4a9be2a3420"
       },
-      "execution_count": 57,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Configured Capacity: 115658190848 (107.72 GB)\n",
-            "Present Capacity: 84627140608 (78.82 GB)\n",
-            "DFS Remaining: 84627116032 (78.82 GB)\n",
+            "Present Capacity: 84629557248 (78.82 GB)\n",
+            "DFS Remaining: 84629532672 (78.82 GB)\n",
             "DFS Used: 24576 (24 KB)\n",
             "DFS Used%: 0.00%\n",
             "Replicated Blocks:\n",
@@ -898,12 +910,12 @@
             "Live datanodes (1):\n",
             "\n",
             "Name: 127.0.0.1:9866 (localhost)\n",
-            "Hostname: 55c1a423cc62\n",
+            "Hostname: e5e881af2f97\n",
             "Decommission Status : Normal\n",
             "Configured Capacity: 115658190848 (107.72 GB)\n",
             "DFS Used: 24576 (24 KB)\n",
-            "Non DFS Used: 31014273024 (28.88 GB)\n",
-            "DFS Remaining: 84627116032 (78.82 GB)\n",
+            "Non DFS Used: 31011856384 (28.88 GB)\n",
+            "DFS Remaining: 84629532672 (78.82 GB)\n",
             "DFS Used%: 0.00%\n",
             "DFS Remaining%: 73.17%\n",
             "Configured Cache Capacity: 0 (0 B)\n",
@@ -912,8 +924,8 @@
             "Cache Used%: 100.00%\n",
             "Cache Remaining%: 0.00%\n",
             "Xceivers: 0\n",
-            "Last contact: Tue Oct 17 20:57:36 UTC 2023\n",
-            "Last Block Report: Tue Oct 17 20:57:31 UTC 2023\n",
+            "Last contact: Tue Oct 17 21:08:01 UTC 2023\n",
+            "Last Block Report: Tue Oct 17 21:07:55 UTC 2023\n",
             "Num of Blocks: 0\n",
             "\n",
             "\n"
@@ -942,12 +954,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 0
         },
         "id": "QYakF2Muw69p",
-        "outputId": "d68fb0ec-4c24-4ce8-cc8c-b5c2f6ffb9d7"
+        "outputId": "7061e22b-f139-4884-c3de-7431cdbef9de"
       },
-      "execution_count": 58,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1001,12 +1013,12 @@
       ],
       "metadata": {
         "id": "uZoX1zzftW3Q",
-        "outputId": "3e55166a-0c10-48af-cf06-f9971a692d00",
+        "outputId": "770f185e-8e93-45a9-b302-6e5eb8ebea80",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1014,7 +1026,7 @@
           "text": [
             "Stopping namenodes on [localhost]\n",
             "Stopping datanodes\n",
-            "Stopping secondary namenodes [55c1a423cc62]\n"
+            "Stopping secondary namenodes [e5e881af2f97]\n"
           ]
         }
       ]
@@ -1025,13 +1037,13 @@
         "!/etc/init.d/ssh stop"
       ],
       "metadata": {
-        "id": "SNqvsygfb8zf",
-        "outputId": "cd6ca1c5-0a83-4f4c-9059-68788ab73eab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SNqvsygfb8zf",
+        "outputId": "c6004eb2-b2fd-4eee-a82f-39c25a2b6062"
       },
-      "execution_count": 59,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
