--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -22,7 +22,7 @@
         "IF6-Z5RotAcO"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxdPPeOj4DpTmFOqntqthZ",
+      "authorship_tag": "ABX9TyMKphwJgImomUiGa6v36FuD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1455,7 +1455,7 @@
       "source": [
         "## Another MapReduce example: filter a log file\n",
         "\n",
-        "We're going to use a Linux logfile and look for the string `sshd` in a given position.\n",
+        "We're going to use a Linux logfile and look for the string `sshd` in a given position. The file stems from [Loghub](https://github.com/logpai/loghub), a freely available collection of system logs for AI-driven log analytics research.\n",
         "\n",
         "The mapper `mapper.py` filters the file for the given string `sshd` at field 4.\n",
         "\n",
