--- a/Run_Spark_on_Google_Colab.ipynb
+++ b/Run_Spark_on_Google_Colab.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNLQbIVWDjkfonxJ0/Ts7WN",
+      "authorship_tag": "ABX9TyNvrue5XuFMA9a5ZcUegz+p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,7 +223,7 @@
           "height": 506
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +358,7 @@
         "id": "yut-LNV-MuZX",
         "outputId": "e1da74d6-2b34-4106-8934-82ff5d9b5dfb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +396,7 @@
         "id": "aKHJYsGPMqFb",
         "outputId": "c70e423c-8aa4-474e-b358-b274ae6a85ee"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
         "id": "oSKF08RRm43X",
         "outputId": "ddfb9056-d33a-4fcd-e2bd-75e10bea0811"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,8 +484,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab.output import eval_js\n",
-        "print(eval_js( \"google.colab.kernel.proxyPort(\" + str(webUIport) + \")\" ))"
+        "if IN_COLAB:\n",
+        "    from google.colab.output import eval_js\n",
+        "    print(eval_js( \"google.colab.kernel.proxyPort(\" + str(webUIport) + \")\" ))"
       ],
       "metadata": {
         "colab": {
@@ -495,7 +496,7 @@
         "id": "rbzRLwxwzBfu",
         "outputId": "f65465a2-b36a-4463-9969-0553245a39d0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,8 +530,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab.output import eval_js\n",
-        "print(eval_js( \"google.colab.kernel.proxyPort(\" + str(18080) + \")\" ))"
+        "if IN_COLAB:\n",
+        "    from google.colab.output import eval_js\n",
+        "    print(eval_js( \"google.colab.kernel.proxyPort(\" + str(18080) + \")\" ))"
       ],
       "metadata": {
         "colab": {
@@ -540,7 +542,7 @@
         "id": "vmx3UOgwqM91",
         "outputId": "da7e625c-3bca-425b-b894-9eddf0a374da"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +583,7 @@
         "id": "CcnrxS8drsaW",
         "outputId": "9b126d98-aa45-462c-f82f-c054ffe9e8a3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,7 +634,7 @@
         "id": "MHoYLbCfwppf",
         "outputId": "8c93b700-3c41-4de2-b828-c77d7117de48"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +685,7 @@
         "id": "KlqvptLesVNY",
         "outputId": "00c3e150-56c8-4400-b2be-a6be9ee1dc32"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +759,7 @@
         "id": "mFYEnnrOw179",
         "outputId": "5749a68f-796d-4408-865a-0c761cb77ef6"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,7 +804,7 @@
         "id": "KE4B2RY5U4wG",
         "outputId": "d7d3b402-4aa3-44d0-e3fc-ab59f9732219"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
